--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -14,7 +14,8 @@
         android:layout_x="957dp"
         android:layout_y="62dp"
         android:text="@string/log"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonSDKTest"
@@ -23,15 +24,17 @@
         android:layout_x="765dp"
         android:layout_y="1dp"
         android:text="@string/sdktest"
-        android:textSize="36sp" />
+        android:textSize="36sp"
+        android:visibility="invisible" />
 
     <EditText
         android:id="@+id/editLog"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="521dp"
+        android:layout_height="659dp"
         android:layout_x="775dp"
-        android:layout_y="100dp"
-        android:inputType="none|textMultiLine" />
+        android:layout_y="122dp"
+        android:inputType="none|textMultiLine"
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/imageViewFingerprint"
