--- a/app/src/main/res/layout/principal.xml
+++ b/app/src/main/res/layout/principal.xml
@@ -40,17 +40,17 @@
         android:id="@+id/imageViewFingerprint"
         android:layout_width="158dp"
         android:layout_height="181dp"
-        android:layout_x="31dp"
-        android:layout_y="101dp"
+        android:layout_x="29dp"
+        android:layout_y="174dp"
         android:contentDescription="@string/fingerprint_capture_image"
         android:src="@android:drawable/picture_frame" />
 
     <TextView
         android:id="@+id/textViewResult"
-        android:layout_width="683dp"
+        android:layout_width="342dp"
         android:layout_height="108dp"
-        android:layout_x="34dp"
-        android:layout_y="289dp"
+        android:layout_x="30dp"
+        android:layout_y="379dp"
         android:text="@string/welcome"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
@@ -73,16 +73,6 @@
         android:textOff="@string/usb_bulk_mode_64_off"
         android:textOn="@string/usb_bulk_mode_64_on"
         android:visibility="invisible" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="70dp"
-        android:layout_height="33dp"
-        android:layout_x="29dp"
-        android:layout_y="20dp"
-        android:text="Aula:"
-        android:textSize="20sp"
-        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtdatoClase"
@@ -110,15 +100,8 @@
         android:id="@+id/btnbuscar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_x="299dp"
-        android:layout_y="9dp"
-        android:text="Buscar Clase" />
-
-    <Spinner
-        android:id="@+id/codAula"
-        android:layout_width="167dp"
-        android:layout_height="39dp"
-        android:layout_x="105dp"
-        android:layout_y="20dp" />
+        android:layout_x="119dp"
+        android:layout_y="39dp"
+        android:text="CARGAR DOCENTES" />
 
 </AbsoluteLayout>
